--- a/src/global.css
+++ b/src/global.css
@@ -5,6 +5,8 @@
 @tailwind utilities;
 body {
   @apply leading-[normal] m-0;
+  background: linear-gradient(to bottom, #f5f5f5, #e0e0e0);
+ 
 }
 *,
 ::before,
